# cg-course

./: .clang-format  README.md
exam/: README.md
labs/: README.md  lab01.docx
labs/01/: README.md  lab01.docx  lab01.md
labs/01/samples/: samples.sln
labs/02/: app-mockups.drawio  lab02.docx  lab02.md
labs/03/: README.md  lab03.docx  lab03.md
labs/04/: README.md  lab04.md
labs/05/: README.md  lab05.md
labs/06/: README.md  lab06.md
labs/07/: README.md  lab07.docx  lab07.md
labs/07/samples_pbr/01_hello_glm/: CMakeLists.txt  conanfile.txt
labs/07/samples_pbr/01_hello_glm/src/: main.cpp
labs/07/samples_pbr/02_pbr/: CMakeLists.txt  README.md  conanfile.txt
labs/07/samples_pbr/02_pbr/src/: main.cpp
labs/07/samples_pbr/02_pbr/src/core/: config.hpp  math.hpp  point3.hpp  point3_io.hpp  ray.hpp  ray_io.hpp  vector2.hpp  vector3.hpp  vector3_io.hpp
labs/08/: README.md
labs/09/: README.md
labs/09_extra/: lab09.docx  lab09.md
labs/10/: README.md
labs/11/: .gitignore  README.md
lectures/: 02 - Программирование 2D графики в Windows.pptx  02 - Программирование графики с использованием GDI и GDI+.pptx  02 - Программирование компьютерной графики с использованием OpenGL.pptx  03 - Векторный анализ, трансформации и матрицы.pptx  04 - Векторный анализ, трансформации и матрицы.pptx  04 - Визуализация трехмерных объектов.pptx  06 - Программирование с использованием шейдеров.pptx  07 - Практическое использование шейдеров.pptx  07 - Программирование с использованием шейдеров.pptx  08 - Практическое использование шейдеров.pptx  10 - Визуализация теней.pptx  11 - Визуализация теней.pptx  README.md
lectures/02/: 02 - Программирование 2D графики в Windows.pptx
lectures/07/: README.md
pull-requests/: README.md
(+1648 files in other folders)
